--- a/TankTroublESS/TankTroublESS.csproj
+++ b/TankTroublESS/TankTroublESS.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rectangle.cs" />
+    <Compile Include="Wall.cs" />
+    <Compile Include="Walls.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
