--- a/TankTroublESS/TankTroublESS.csproj
+++ b/TankTroublESS/TankTroublESS.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,9 +45,11 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Background.cs" />
+    <Compile Include="Bullet.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,16 +90,22 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Images\TankGreen.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Images\TankRed.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Images\TG.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Images\TR.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Audio\TankMoving.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Audio\TankExploding.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Audio\TankFiring.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
